Fix white space in input group button

--- a/less/bootstrap-theme/buttons.less
+++ b/less/bootstrap-theme/buttons.less
@@ -7,6 +7,10 @@
   white-space: pre-wrap;
   word-wrap: break-word;
   .button-variant-flat();
+
+  .input-group-btn & {
+    white-space: normal;
+  }
 }
 
 .btn-link {
